// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with a multiple expenses 1`] = `
<div>
  Viewing 
  3
   
  expenses
   totalling 
  $4,530.00
</div>
`;

exports[`should correctly render ExpenseSummary with a single expense 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling 
  $1,230.00
</div>
`;
